fix(odata-sample-curd): metadata working